src/styles/explorer.css
/* ... */
/*
    Compatibility with existing variables
 */
:root {
    --network-theme-color: var(--network-button-color);
    --h-theme-highlight-color: var(--network-text-accent-color);
    --h-theme-page-background-color: var(--background-primary);
    --h-theme-box-background-color: var(--background-tertiary);
}


/*  ============================================================================
    Explorer classes
*/


html, body {
    background: var(--background-primary);
    color: var(--text-primary);
    font-family: var(--font-family-proportional), sans-serif;
    font-size: 14px;
    font-style: normal;
    font-weight: 400;
    text-rendering: optimizeLegibility;
    text-size-adjust: 100%;
    -moz-osx-font-smoothing: grayscale;
    -webkit-font-smoothing: antialiased;
}

body, button, input, optgroup, select, textarea {
    font-family: var(--font-family-proportional), sans-serif;
}

a {
    text-decoration: none;
    color: inherit;
    cursor: pointer;
}

a:hover {
    color: grey;
}

button {
    background-color: var(--background-tertiary);
    border: none;
    padding: 0;
}

blockquote, body, dd, dl, dt, fieldset, figure, h1, h2, h3, h4, h5, h6, hr, html, iframe, legend, li, ol, p, pre, textarea, ul {
    margin: 0;
    padding: 0
}

button, input, select, textarea {
    margin: 0
}

ul {
    list-style: none
}

.h-page-frame {
    display: flex;
    flex-direction: column;
    gap: 16px;
    min-height: 100vh;
}

.h-page-content {
    display: flex;
    flex-direction: column;
    flex: 1;
    gap: 16px;
    margin-left: 16px;
    margin-right: 16px;
}

@media (min-width: 1080px) {
    .h-page-content {
        margin-left: 32px;
        margin-right: 32px;
    }
}

.h-page-toolbar {
    display: flex;
    flex-direction: row;
    justify-content: space-between;
    align-items: center;
    margin-left: 16px;
    margin-right: 16px;
}

@media (min-width: 1080px) {
    .h-page-toolbar {
        margin-left: 32px;
        margin-right: 32px;
    }
}

.h-side-by-side-content {
    display: flex;
    flex-direction: column;
    gap: 16px;
}

@media (min-width: 1600px) {
    .h-side-by-side-content {
        display: grid;
        gap: 16px;
        grid-template-columns: 1fr 1fr;
    }
}

.h-sub-section {
    background-color: var(--tab-background);
    border-radius: 8px;
    color: var(--text-primary);
    font-family: var(--font-family-heading), sans-serif;
    font-weight: 700;
    font-size: 14px;
    max-width: fit-content;
    padding: 8px 8px;
}

.h-has-pill {
    background: var(--network-chip-color);
    border-radius: 32px;
    color: var(--network-chip-text-color);
    display: inline-block;
    font-family: var(--font-family-heading), sans-serif;
    font-size: 10px;
    font-weight: 400;
    line-height: 15px;
    height: 20px;
    padding: 2px 8px;
    text-wrap: nowrap;
}

.h-has-pill.h-chip-success {
    background-color: var(--status-success-color);
    color: #FFFFFF;
}

.h-has-pill.h-chip-error {
    background-color: var(--status-error-color);
    color: #FFFFFF;
}

.h-has-pill.h-chip-default {
    background-color: var(--chip-secondary-default);
    color: var(--text-primary);
}

.h-is-bold {
    font-weight: 600;
}

.h-is-monospace {
    font-family: var(--font-family-monospace), sans-serif;
}

.h-is-numeric {
    font-variant-numeric: tabular-nums;
}

.h-is-low-contrast {
    color: var(--text-secondary);
}

.h-text-success {
    color: var(--text-success);
}

.h-text-error {
    color: var(--text-error);
}

.h-is-extra-text {
    color: var(--network-text-accent-color);
}


.h-should-wrap {
    word-break: break-word;
}

hr.horizontal-line {
    background-color: var(--border-secondary);
    border: 0;
    height: 1px;
    margin: 0;
    padding: 0;
}

.h-is-label {
    background: var(--button-background-secondary);
    border: solid 1px var(--border-secondary);
    border-radius: 4px;
    color: var(--text-primary);
    font-size: 14px;
    font-weight: 400;
    padding: 3px 6px 3px;
}

.h-is-compact-label {
    background: var(--button-background-secondary);
    border: solid 1px var(--border-secondary);
    border-radius: 4px;
    color: var(--text-primary);
    font-size: 11px;
    font-weight: 400;
    line-height: 14px;
    padding: 2px 4px 2px;
}

.w250 {
    max-width: 250px;
    overflow: hidden;
    white-space: nowrap;
    text-overflow: ellipsis;
}

.w300 {
    max-width: 300px;
    overflow: hidden;
    white-space: nowrap;
    text-overflow: ellipsis;
}

.w400 {
    max-width: 400px;
    overflow: hidden;
    white-space: nowrap;
    text-overflow: ellipsis;
}

.h-code-box {
    background-color: var(--background-secondary);
    border-radius: 8px;
    border-width: 0;
    min-height: 20px;
    padding: 16px;
}

.h-code-source {
    background-color: var(--background-secondary) !important;
    font-size: 12px !important;
}

.h-banner-link {
    text-decoration: underline;
}

a.h-banner-link:hover {
    color: #D7D7D7;
}

.card-title-extra {
    color: var(--network-text-accent-color);
    word-break: break-all;
}

.dashboard-content {
    align-items: flex-start;
    display: flex;
    flex-direction: column;
    gap: 32px;
    height: fit-content;
    padding: 26px 32px 26px 32px;
    width: fit-content;
}

@media (min-width: 768px) {
    .dashboard-content {
        align-items: center;
        display: grid;
        gap: 16px;
        grid-template-columns: 1fr auto 1fr;
        justify-items: flex-start;
    }
}

@media (min-width: 1280px) {
    .dashboard-content {
        grid-template-columns:  repeat(7, auto);
        justify-items: center;
    }
}

.mini-line-separator {
    border: 1px solid var(--border-secondary);
    rotate: 0deg;
    width: 100%;
}

@media (min-width: 768px) {
    .mini-line-separator {
        border: 1px solid var(--border-secondary);
        rotate: -90deg;
        width: 32px;
    }
}
/* ... */

